0.10 - 2009-09-??
 * Changed gearmand to remap stdio to /dev/null for detaching.
 * Fixed bug that now allows workers to run concurrent jobs.
 * Changed behavior of sending NOOPs to one per PRESLEEP, rather than only
   having one in the outgoing queue at any time.
 * API cleanup to make the code more consistent and object-oriented.
 * Added more documentation for base classes, client, and worker.
 * Build system updates.

0.9 - 2009-07-20
 * Added libsqlite3 persistent queue support (Cory Bennett).
 * Added libpq (PostgreSQL) persistent queue support.
 * Updated autoconf build system.
 * Doxygen documentation cleanup.
 * Bug fix in HTTP protocol module.

0.8 - 2009-06-30
 * Added pluggable protocol support.
 * Added basic HTTP protocol support.
 * Updated autoconf build system.
 * Renamed modconf to gearman_conf.
 * Improved logging messages for gearmand.
 * Removed all struct memsets and packed structs for better memory usage.
 * Fixed client connect bug with multiple job servers.
 * Fixed server spinning bug with long running jobs and large workloads.

0.7 - 2009-05-31
 * Added libmodconf for config option processing. Eventually this will be split
   into a separate library. Updated gearmand and tests to use libmodconf.
 * Fixed persistent queue bug where jobs were not removed after replay.
 * Fix for bug #379198.
 * Changed done() function for queue, function_name is now passed to it as
   well as unique.
 * Fixed text protocol command response to be dynamic length.
 * Fixed libevent usage to support libevent 1.1 (still used in CentOS and Suse).
 * Added gearman_*_add_servers to client/worker interfaces for taking
   server lists.

0.6 - 2009-05-19
 * Changed behavior so forground jobs are not run when their connected clients
   disconnect. This is how the Perl server behaves.
 * Changed to named logging macros, making it easier for module writers to use.
 * Added persistent queue support with a libdrizzle module. This allows queue