@@ -84,6 +84,7 @@ gearman_server_st *gearman_server_create(gearman_server_st *server)
   server->shutdown_graceful= false;
   server->proc_wakeup= false;
   server->proc_shutdown= false;
+  server->job_retries= 0;
   server->thread_count= 0;
   server->free_packet_count= 0;
   server->function_count= 0;
@@ -178,6 +179,12 @@ void gearman_server_free(gearman_server_st *server)
 
   if (server->options & GEARMAN_SERVER_ALLOCATED)
     free(server);
+}
+
+void gearman_server_set_job_retries(gearman_server_st *server,
+                                    uint8_t job_retries)
+{
+  server->job_retries= job_retries;
 }
 
 void gearman_server_set_log_fn(gearman_server_st *server,
